@@ -78,11 +78,8 @@ namespace mapnik
                 break;
             }
 
-#ifndef MAPNIK_BIG_ENDIAN
-            needSwap_=byteOrder_?wkbXDR:wkbNDR;
-#else
-            needSwap_=byteOrder_?wkbNDR:wkbXDR;	
-#endif	    
+            // 0 if true (NDR): 1 if false (XDR)
+            needSwap_ = byteOrder_?wkbXDR:wkbNDR;
         }
 
         ~wkb_reader() {}
