@@ -15,6 +15,8 @@ For a complete change history, see the SVN log.
 Mapnik 0.7.1 Release
 --------------------
 
+- Fixed reading of PostGIS data on Big Endian systems (#515)
+
 - PostGIS: Added better support for alterative schemas (#500)
 
 - AGG Renderer - Enforced default gamma function on all symbolizers to ensure proper antialiasing
